[package]
name = "dirtrack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dirtrack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
walkdir = "2"
indicatif = "0.17"
colored = "2"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
