[package]
name = "dirtrack"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "dirtrack"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
walkdir = "2"
colored = "2"
dialoguer = "0.11"
opener = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.7", features = ["server", "transport-io"] }
schemars = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-std"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
